last add commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body >
-    <h1 class="TEXT">Calculate with Jay</h1>
+    <h1 class="TEXT">Calculate with Jay Jadav</h1>
     <div class="conatiner bg-red mx-auto">
            <div>
             <input class="input" type="text">
